<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.jjaln.dailychart.contents.community.RichEditor.RichEditor
            android:id="@+id/write_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoLink="web|email"
            android:background="?attr/colorOnPrimary"
            android:gravity="start" />

        <TextView
            android:id="@+id/HTML"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"/>


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/write_bottom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorOnPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="8dp"
            app:titleMarginStart="20dp">
            <HorizontalScrollView
                android:id="@+id/write_center_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.jjaln.dailychart.contents.community.WriteCustomButton
                        android:id="@+id/write_textSize"
                        android:layout_width="38dp"
                        android:layout_height="35dp"
                        android:background="?attr/selectableItemBackground"

                        android:scaleType="fitCenter"
                        android:src="@drawable/outline_format_size_black_48" />

                    <com.jjaln.dailychart.contents.community.WriteCustomButton
                        android:id="@+id/write_textColor"
                        android:layout_width="38dp"
                        android:layout_height="35dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/textColor"
                        android:scaleType="fitCenter"
                        android:src="@drawable/baseline_format_color_text_black_48" />

                    <com.jjaln.dailychart.contents.community.WriteCustomButton
                        android:id="@+id/write_textBgColor"
                        android:layout_width="38dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/textColor"
                        android:scaleType="fitCenter"
                        android:src="@drawable/baseline_format_color_fill_black_48" />

                    <com.jjaln.dailychart.contents.community.WriteCustomButton
                        android:id="@+id/write_textBold"
                        android:layout_width="38dp"
                        android:layout_height="35dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/textBold"
                        android:scaleType="fitCenter"
                        android:src="@drawable/outline_format_bold_black_48" />

                    <com.jjaln.dailychart.contents.community.WriteCustomButton
                        android:id="@+id/write_textItalic"
                        android:layout_width="38dp"
                        android:layout_height="35dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/textItalic"
                        android:scaleType="fitCenter"
                        android:src="@drawable/outline_format_italic_black_48" />

                    <com.jjaln.dailychart.contents.community.WriteCustomButton
                        android:id="@+id/write_textUnderLine"
                        android:layout_width="38dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/textAlign"
                        android:scaleType="fitCenter"
                        android:src="@drawable/baseline_format_underlined_black_48" />

                    <com.jjaln.dailychart.contents.community.WriteCustomButton
                        android:id="@+id/write_textStrike"
                        android:layout_width="38dp"
                        android:layout_height="35dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/textStrike"
                        android:scaleType="fitCenter"
                        android:src="@drawable/outline_format_strikethrough_black_48" />

                    <com.jjaln.dailychart.contents.community.WriteCustomButton
                        android:id="@+id/write_textAlign"
                        android:layout_width="38dp"
                        android:layout_height="35dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/textAlign"
                        android:scaleType="fitCenter"
                        android:src="@drawable/outline_format_align_left_black_48" />

                    <ImageButton
                        android:id="@+id/write_imageInsert"
                        android:layout_width="38dp"
                        android:layout_height="36dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/ImageUpload"
                        android:scaleType="fitCenter"
                        android:src="@drawable/outline_image_black_48" />

                    <ImageButton
                        android:id="@+id/write_videoInsert"
                        android:layout_width="38dp"
                        android:layout_height="36dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/videoUpload"
                        android:scaleType="fitCenter"
                        android:src="@drawable/outline_slideshow_black_48" />
                </LinearLayout>
            </HorizontalScrollView>


        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>